<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonPlus">+</string>
    
    <string name="clear">Clear</string>
    <string name="store">Store</string>
    <string name="recall">Recall</string>

</resources>